# ch32v-hal

./: Cargo.toml
examples/ch32v307/: Cargo.toml  memory.x  openocd-attach.cfg
examples/ch32v307/.cargo/: config.toml
hal/: Cargo.toml
hal/src/: afio.rs  dma.rs  lib.rs  prelude.rs  serial.rs  time.rs  timer.rs
hal/src/gpio/: mod.rs  partially_erased.rs
hal/src/rcc/: consts.rs  enable.rs  mod.rs  pll.rs
hal/src/timer/: counter.rs  delay.rs  pins.rs  pwm.rs  pwm_input.rs
src/: lib.rs
