[package]
name = "ch32v-hal"
version = "0.0.0"
edition = "2021"
description = "HAL crate for ch32v series MCU"
license = "MIT OR Apache-2.0"
exclude = [".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.9.0"
embedded-hal = { version = "0.2.6", features = ["unproven"] }
ch32v3 = {version = "0.1.6"}
nb = "1"
fugit = "0.3.6"
embedded-dma = "0.2.0"

[features]

device-selected = []
offical-embedded-hal = []
gpiod=[]
gpioe=[]
usart3=[]

# family features
ch32v0 = []
ch32v1 = []
ch32v2 = []
ch32v3 = []

# chip features
ch32v307 = ["device-selected", "gpiod", "gpioe", "usart3", "ch32v3/ch32v30x"]