[package]
name = "ch32v-hal"
version = "0.0.0"
edition = "2021"
description = "HAL crate for ch32v series MCU"
license = "MIT OR Apache-2.0"
exclude = [".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.10.1"
embedded-hal = { version = "0.2.6", features = ["unproven"] }
ch32v3 = {version = "0.1.6"}
nb = "1"
fugit = "0.3.6"
embedded-dma = "0.2.0"

[features]

critical-section = ["ch32v3/critical-section"]
critical-section-single-hart = ["riscv/critical-section-single-hart"]
device-selected = []
offical-embedded-hal = []
gpiod=[]
gpioe=[]
usart3=[]

# family features
ch32v0 = ["critical-section-single-hart"]
ch32v1 = ["critical-section-single-hart"]
ch32v2 = ["critical-section-single-hart"]
ch32v3 = ["critical-section-single-hart"]

# chip features
ch32v307 = ["ch32v3", "device-selected", "gpiod", "gpioe", "usart3", "ch32v3/ch32v30x"]