[package]
name = "ch32v-hal"
version = "0.0.0"
edition = "2021"
description = "HAL crate for ch32v series MCU"
license = "MIT OR Apache-2.0"
exclude = [".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.10.1"
embedded-hal = { version = "0.2.6", features = ["unproven"] }
ch32v3 = {version = "0.1.6"}
nb = "1"
fugit = "0.3.6"
fugit-timer = "0.1.3"
embedded-dma = "0.2.0"
rtic-monotonic = { version = "1.0", optional = true }
bitflags = "1.3.2"
void = { default-features = false, version = "1.0.2" }
qingke = {git="https://github.com/myrfy001/qingke.git"}

[features]

critical-section = ["ch32v3/critical-section"]
critical-section-single-hart = ["riscv/critical-section-single-hart"]
device-selected = []
offical-embedded-hal = []
gpiod=[]
gpioe=[]
usart3=[]

tim_adtm_8_9_10=[]
tim_gptm_3=[]
tim_gptm_4_5=[]
tim_bctm_6_7=[]

# family features
ch32v0 = ["critical-section-single-hart"]
ch32v1 = ["critical-section-single-hart"]
ch32v2 = ["critical-section-single-hart"]
ch32v3 = ["critical-section-single-hart"]

# chip features
ch32v307 = ["ch32v3", "device-selected", "gpiod", "gpioe", "usart3", "ch32v3/ch32v30x", 
            "tim_adtm_8_9_10", "tim_gptm_3", "tim_gptm_4_5", "tim_bctm_6_7"]